option java_package = "org.robotninjas.barge.rpc";
option java_generic_services = true;
option java_outer_classname = "RaftProto";

import "entry.proto";

message RequestVote {
	required int64 term = 1;
	required string candidate_id = 2;
	required int64 last_log_index = 3;
	required int64 last_log_term = 4;
}

message RequestVoteResponse {
	required int64 term = 1;
	required bool vote_granted = 2;
}

message AppendEntries {
	required int64 term = 1;
	required string leader_id = 2;
	required int64 prev_log_index = 3;
	required int64 prev_log_term = 4;
	required int64 commit_index = 5;
	repeated Entry entries = 6;
}

message AppendEntriesResponse {
	required int64 term = 1;
	required bool success = 2;
}

service RaftService {
	rpc requestVote (RequestVote) returns (RequestVoteResponse);
	rpc appendEntries (AppendEntries) returns (AppendEntriesResponse);
}
